# vce-performance

./: .gitignore  README.md  app.py  data_loader.py  pyproject.toml  vce_school_results_analysis_dataset.csv
raw_data/: 2018VCEHighPerformers.xlsx  2018_Senior_Secondary_Completion_and_Achievement_Information.xlsx  2019SeniorSecondaryCompletionandAchievementInformation.xlsx  2020SeniorSecondaryCompletionandAchievementInformation.xlsx  2021SeniorSecondaryCompletionAndAchievementInformation.xlsx  2022SeniorSecondaryCompletionAndAchievementInformation.xlsx  2024SeniorSecondaryCompletionAndAchievementInformation.xlsx  postcompletiondata-schools-2014-2017.xlsx  school_name_joining_keys.csv
