[tool.poetry]
name = "vic-atar-trackers"
version = "0.1.0"
description = ""
authors = ["Yass Eltahir <yeltahir@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"
plotly = "^5.18.0"
openpyxl = "^3.1.2"
dash = "^2.14.2"
dash-bootstrap-components = "^1.5.0"
dash-bootstrap-templates = "^1.1.1"
gunicorn = "^21.2.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
